+ Added foundation for Tasks + Added WIndows Authentication + Cleaned up projects

--- a/Scoop.Core/Scoop.Core.csproj
+++ b/Scoop.Core/Scoop.Core.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,7 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caching\CacheHandler.cs" />
+    <Compile Include="Caching\ICacheHandlerItem.cs" />
+    <Compile Include="Tasks\Interfaces\ITask.cs" />
+    <Compile Include="Tasks\Interfaces\ITaskListener.cs" />
+    <Compile Include="Tasks\Interfaces\ITaskResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tasks\CpuPerformanceTask.cs" />
+    <Compile Include="Tasks\Task.cs" />
+    <Compile Include="Tasks\TaskResult.cs" />
+    <Compile Include="Tasks\PerformanceTaskResult.cs" />
+    <Compile Include="Tasks\VoidTaskListener.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
