--- a/Scoop.Server/Scoop.Server.csproj
+++ b/Scoop.Server/Scoop.Server.csproj
@@ -73,6 +73,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Cors, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.2\lib\net45\System.Web.Cors.dll</HintPath>
@@ -85,9 +86,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hubs\MyHub.cs" />
+    <Compile Include="Hubs\PerformanceHub.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Tasks\PerformanceTaskListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
