--- a/Scoop.Core/Scoop.Core.csproj
+++ b/Scoop.Core/Scoop.Core.csproj
@@ -30,6 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\packages\Microsoft.Owin.3.0.0\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
@@ -43,18 +52,29 @@
   <ItemGroup>
     <Compile Include="Caching\CacheHandler.cs" />
     <Compile Include="Caching\ICacheHandlerItem.cs" />
+    <Compile Include="Common\PerformanceData.cs" />
+    <Compile Include="Common\PerformanceInfo.cs" />
+    <Compile Include="Common\PerformanceValues.cs" />
+    <Compile Include="ConnectionStorage\ConnectionModel.cs" />
+    <Compile Include="ConnectionStorage\CookieConnectionStorage.cs" />
+    <Compile Include="ConnectionStorage\IConnectionModel.cs" />
+    <Compile Include="ConnectionStorage\IConnectionStorage.cs" />
     <Compile Include="Tasks\Interfaces\ITask.cs" />
     <Compile Include="Tasks\Interfaces\ITaskListener.cs" />
     <Compile Include="Tasks\Interfaces\ITaskResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tasks\CpuPerformanceTask.cs" />
+    <Compile Include="Tasks\PerformanceTask.cs" />
     <Compile Include="Tasks\Task.cs" />
     <Compile Include="Tasks\TaskResult.cs" />
     <Compile Include="Tasks\PerformanceTaskResult.cs" />
+    <Compile Include="Tasks\TaskResultHistory.cs" />
     <Compile Include="Tasks\VoidTaskListener.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Common\" />
+    <Folder Include="Authentication\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
