+ Added model namespaces to view config

--- a/Scoop.Web/Views/Web.config
+++ b/Scoop.Web/Views/Web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="Scoop.Web" />
+        <add namespace="Scoop.Web.Models" />
+        <add namespace="Scoop.Web.Models.PageModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
