--- a/Scoop.Web/packages.config
+++ b/Scoop.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.3.1" targetFramework="net451" />
+  <package id="Chart.js" version="1.0.1" targetFramework="net451" />
+  <package id="d3" version="3.5.3" targetFramework="net451" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
@@ -9,6 +11,8 @@
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Twitter.Bootstrap.Less" version="3.3.1" targetFramework="net451" />
 </packages>
