--- a/Scoop.Core/packages.config
+++ b/Scoop.Core/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="Octokit" version="0.6.2" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="semver" version="1.1.2" targetFramework="net451" />
 </packages>
