--- a/Scoop.Core/packages.config
+++ b/Scoop.Core/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="Octokit" version="0.13.0" targetFramework="net451" />
-  <package id="Owin" version="1.0" targetFramework="net451" />
-  <package id="semver" version="1.1.2" targetFramework="net451" />
-  <package id="Westwind.Utilities.Configuration" version="2.25" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net46" />
+  <package id="Octokit" version="0.16.0" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="semver" version="1.1.2" targetFramework="net46" />
+  <package id="Westwind.Utilities.Configuration" version="2.25" targetFramework="net46" />
 </packages>
