--- a/Scoop.Server/packages.config
+++ b/Scoop.Server/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net46" />
@@ -12,4 +13,6 @@
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="SimpleInjector" version="3.0.5" targetFramework="net46" />
+  <package id="Westwind.Utilities.Configuration" version="2.25" targetFramework="net46" />
 </packages>
