--- a/Scoop.Web/bundleconfig.json
+++ b/Scoop.Web/bundleconfig.json
@@ -6,6 +6,7 @@
       "Scripts/site/ConnectionViewModel.js",
       "Scripts/site/AutoUpdateTask.js",
       "Scripts/site/PerformanceTask.js",
+      "Scripts/site/ServerStatusTask.js",
       "Scripts/site/Site.js"
     ]
   }
