--- a/Scoop.Web/packages.config
+++ b/Scoop.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="FontAwesome" version="4.4.0" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.0" targetFramework="net46" />
+  <package id="js-cookie.TypeScript.DefinitelyTyped" version="0.0.3" targetFramework="net46" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="0.8.3" targetFramework="net46" />
   <package id="knockout.viewmodel" version="2.0.3" targetFramework="net46" />
   <package id="knockout.viewmodel.TypeScript.DefinitelyTyped" version="0.0.7" targetFramework="net46" />
