--- a/Scoop.Web/package.json
+++ b/Scoop.Web/package.json
@@ -5,13 +5,19 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "grunt": "^0.4.5",
+    "bower": "^1.5.3",
     "typescript": "^1.6.2",
+    "grunt-timer": "^0.6.0",
     "grunt-typescript": "^0.7.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-cssmin": "^0.14.0"
+    "grunt-contrib-cssmin": "^0.14.0",
+    "gulp-less": "^3.0.3",
+    "gulp-typescript": "^2.9.2",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.4.1"
   }
 }
