--- a/Scoop.Web/bower.json
+++ b/Scoop.Web/bower.json
@@ -3,8 +3,8 @@
 	"private": true,
   "dependencies": {
     "jquery": "^2.1.4",
+    "bootstrap-material-design": "^0.3.0",
     "bootstrap": "^3.3.5",
-    "bootswatch": "^3.3.5",
     "signalr": "^2.2.0",
     "knockout": "^3.3.0",
     "moment": "^2.10.6",
