--- a/Scoop.Web/package.json
+++ b/Scoop.Web/package.json
@@ -19,6 +19,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.1",
-    "gulp-concat": "^2.6.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-plumber": "^1.0.1"
   }
 }
