--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.1",
     "gulp-concat": "^2.6.0",
-    "gulp-plumber": "^1.0.1"
+    "gulp-plumber": "^1.0.1",
+    "gulp-usemin": "^0.3.20",
+    "gulp-minify-html": "^1.0.5",
+    "gulp-rev": "^6.0.1",
+    "gulp-clean": "^0.3.1",
+    "merge-stream": "^1.0.0"
   }
 }
