--- a/Scoop.Core/Scoop.Core.csproj
+++ b/Scoop.Core/Scoop.Core.csproj
@@ -80,27 +80,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackgroundTasks\ServerStatusTask.cs" />
-    <Compile Include="BackgroundTasks\ServerStatus\ServerStatusTaskResult.cs" />
-    <Compile Include="BackgroundTasks\ServerStatus\WindowsUpdateStatus.cs" />
+    <Compile Include="Tasks\ServerStatus\ServerStatusTask.cs" />
+    <Compile Include="Tasks\ServerStatus\ServerStatusTaskResult.cs" />
+    <Compile Include="Tasks\ServerStatus\WindowsUpdateStatus.cs" />
     <Compile Include="Caching\CacheHandler.cs" />
     <Compile Include="Caching\ICacheHandlerItem.cs" />
-    <Compile Include="Common\PerformanceData.cs" />
-    <Compile Include="Common\PerformanceInfo.cs" />
-    <Compile Include="Common\PerformanceValues.cs" />
+    <Compile Include="Tasks\Performance\PerformanceData.cs" />
+    <Compile Include="Tasks\Performance\PerformanceInfo.cs" />
+    <Compile Include="Tasks\Performance\PerformanceValues.cs" />
     <Compile Include="Configuration\BackgroundTaskConfiguration.cs" />
-    <Compile Include="BackgroundTasks\AutoUpdateTask.cs" />
-    <Compile Include="BackgroundTasks\Interfaces\IBackgroundTask.cs" />
-    <Compile Include="BackgroundTasks\Interfaces\IBackgroundTaskListener.cs" />
-    <Compile Include="BackgroundTasks\Interfaces\IBackgroundTaskResult.cs" />
+    <Compile Include="Tasks\AutoUpdate\AutoUpdateTask.cs" />
+    <Compile Include="Tasks\IBackgroundTask.cs" />
+    <Compile Include="Tasks\IBackgroundTaskListener.cs" />
+    <Compile Include="Tasks\IBackgroundTaskResult.cs" />
     <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BackgroundTasks\PerformanceTask.cs" />
-    <Compile Include="BackgroundTasks\BackgroundTask.cs" />
-    <Compile Include="BackgroundTasks\BackgroundTaskResult.cs" />
-    <Compile Include="BackgroundTasks\PerformanceTaskResult.cs" />
-    <Compile Include="BackgroundTasks\BackgroundTaskResultHistory.cs" />
-    <Compile Include="BackgroundTasks\VoidTaskListener.cs" />
+    <Compile Include="Tasks\Performance\PerformanceTask.cs" />
+    <Compile Include="Tasks\BackgroundTask.cs" />
+    <Compile Include="Tasks\BackgroundTaskResult.cs" />
+    <Compile Include="Tasks\Performance\PerformanceTaskResult.cs" />
+    <Compile Include="Tasks\BackgroundTaskResultHistory.cs" />
+    <Compile Include="TaskListeners\VoidTaskListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Authentication\" />
